2005-10-05  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/import_tiger.c:
	* src/search_road.c:
	* src/db.c: Add level of detail concept.
	* src/mainwindow.c: Add zoomtool.
	* src/map_draw_gdk.c: 
	* src/map_draw_cairo.c: Calculate bounding box on load instead of draw.  Update to tile drawing.
	* src/map.c: Begin splitting this file up more.  Add lots more zoom levels.
	* src/scenemanager.c: Remove empty module init.
	* src/main.c: Don't need to init scenemanager module.

2005-10-01  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/downloadmanager.c: Remove _ from public function _downloadmanager_new().
	* src/mainwindow.c: Set check on View/Fullscreen and View/Sidebar when state changes for reasons other than the user clicking the menu item.
	* src/map_history.c: Add some debug printing support.
	* src/searchwindow.c: Add a new history item when user selects a search result.
	* src/util.c: Moved some basic window state set/test functions here.

2005-10-01  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* Renamed src/history.c to src/map_history.c
	* Renamed src/tooltip.c to src/tooltipwindow.c
	* Renamed src/downloader.c to src/downloadmanager.c
	* src/glyph.c: Only require a targetwidget when generating a pixmap.
	* src/main.c: Move glyph module init here.
	* src/*: Fix all compiler warning messages.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/welcomewindow.c: Removed.
	* src/gui.c: Removed welcome window.
	* src/db.c: Added bounding rect calculation to pointstring loading.
	* src/search_road.c: Update to new pointstring loading function.
	* src/mainwindow.c: Removed unneeded includes.
	* src/map.c: Add rect overlap test function.
	* src/map_draw_gdk.c: Use rect overlap test from map.c.
	* src/tooltip.c: Remove unused init function.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c: Removed alloc/dealloc of road_t.
	* src/point.c:
	* src/point.h:
	* src/pointstring.c: