@@ -1095,8 +1095,8 @@ Banks</property>
 </widget>
 
 <widget class="GtkWindow" id="mainwindow">
-  <property name="width_request">700</property>
-  <property name="height_request">500</property>
+  <property name="width_request">600</property>
+  <property name="height_request">300</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Roadster Preview Release</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
